(library
 (name fn)
 (modules fn))

(library
 (name producer)
 (modules producer)
 (libraries fn hmap))

(library
 (name import)
 (modules import)
 (libraries producer lwt))

(library
 (name container)
 (modules container)
 (libraries rest_handlers rest_impl))

(library
 (name qqr)
 (modules lib_main)
 (libraries container dream))
